samples/_failures_safe/1761166743_3c8bc7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2ef0d1c1.c: In function ‘tokenize’:
./samples/SAFE/__tmp_2ef0d1c1.c:162:46: error: expected ‘]’ at end of input
  162 |         char c = lexer->input[lexer->position
      |                                              ^
      |                                              ]
./samples/SAFE/__tmp_2ef0d1c1.c:162:9: error: expected declaration or statement at end of input
  162 |         char c = lexer->input[lexer->position
      |         ^~~~
./samples/SAFE/__tmp_2ef0d1c1.c:162:9: error: expected declaration or statement at end of input
